--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,3 +1,11 @@
 .header {
-  margin: 100px;
+  margin-bottom: 100px;
+  background-color: blue;
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  top: 0;
 }
