--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,6 +1,6 @@
 .card_wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -9,6 +9,6 @@
   justify-content: center;
   align-items: center;
   margin: 20px;
-  width: 30%;
+  width: 40%;
   height: 13vh;
 }
