--- a/src/Components/Promotion.css
+++ b/src/Components/Promotion.css
@@ -1,8 +1,15 @@
 .promotion_card_wrapper {
   display: flex;
+  margin: 20px;
+  margin-top: 100px;
 }
 
 .promotion_card {
   width: 100%;
-  height: 13vh;
+  height: 60vh;
+}
+
+.pic {
+  width: 100%;
+  height: 100%;
 }
