--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,6 +1,5 @@
 .header {
-  margin-bottom: 100px;
-  background-color: blue;
+  background-color: #e63946;
   height: 10vh;
   width: 100%;
   display: flex;
@@ -8,4 +7,7 @@
   align-items: center;
   position: sticky;
   top: 0;
+}
+
+.inputField {
 }
