--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  background-color: #f1faee;
 }
 
 .card_component {
@@ -9,6 +10,10 @@
   justify-content: center;
   align-items: center;
   margin: 20px;
-  width: 40%;
-  height: 13vh;
+  width: 34%;
+  height: 20vh;
+}
+
+.body_wrapper {
+  margin: 0px;
 }
