--- a/src/Components/Promotion.css
+++ b/src/Components/Promotion.css
@@ -1,12 +1,18 @@
+.promotion_wrapper {
+  margin-top: 0px;
+  background-color: #a8dadc;
+}
+
 .promotion_card_wrapper {
   display: flex;
-  margin: 20px;
-  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .promotion_card {
   width: 100%;
   height: 60vh;
+  margin: 40px;
 }
 
 .pic {
