--- a/src/Components/Promotion.css
+++ b/src/Components/Promotion.css
@@ -1,18 +1,24 @@
 .promotion_wrapper {
   margin-top: 0px;
-  background-color: #a8dadc;
+  background-color: #f8edeb;
 }
 
 .promotion_card_wrapper {
   display: flex;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .promotion_card {
   width: 100%;
   height: 60vh;
   margin: 40px;
+  box-shadow: 5px 5px 5px 5px rgba(160, 95, 95, 0.3) !important;
+  transition: transform 200ms ease-in !important;
+}
+
+.promotion_card:hover {
+  transform: scale(1.05);
 }
 
 .pic {
