change promotion, add Nearby/Footer, Add pages, change search bar position

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,13 +1,22 @@
 .header {
+  display: flex;
+
   background-color: #ffb5a7;
   height: 10vh;
   width: 100%;
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: sticky;
   top: 0;
 }
 
-.inputField {
+.logo {
+  left: 0px;
+  height: 100%;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.icon {
+  cursor: pointer;
 }
