install react-router-dom, wrap App.js in Router, Link images of sport to selected sport page, add detail in selected sport page

--- a/src/Components/Nearby.css
+++ b/src/Components/Nearby.css
@@ -1,4 +1,6 @@
 .body_nearby {
   background-color: #f9dcc4;
   height: 20vh;
+  margin-bottom: 5px;
+  box-shadow: 5px 5px 5px 5px rgba(231, 98, 98, 0.3);
 }
