--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -14,6 +14,7 @@
   width: 34%;
   height: 20vh;
   box-shadow: 5px 5px 5px 5px rgba(160, 95, 95, 0.3) !important;
+  cursor: pointer;
 }
 .card_component:hover {
   transform: scale(1.1);
@@ -24,8 +25,9 @@
   display: flex;
 }
 .body_wrapper {
-  margin: 0px;
+  margin-bottom: 5px;
   background-color: #fcd5ce;
+  box-shadow: 5px 5px 5px 5px rgba(160, 95, 95, 0.3);
 }
 
 .img_component {
