--- a/src/Components/Nearby.css
+++ b/src/Components/Nearby.css
@@ -1,6 +1,22 @@
 .body_nearby {
   background-color: #f9dcc4;
-  height: 20vh;
   margin-bottom: 5px;
   box-shadow: 5px 5px 5px 5px rgba(231, 98, 98, 0.3);
+}
+
+.body_nearby_wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.nearby_card {
+  width: 100%;
+  height: 60vh;
+  margin: 40px;
+  box-shadow: 5px 5px 5px 5px rgba(160, 95, 95, 0.3) !important;
+  transition: transform 200ms ease-in !important;
+}
+
+.nearby_card:hover {
+  transform: scale(1.07);
 }
