Change design and add find court page

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,5 +1,5 @@
 .body_footer {
-  background-color: #fec89a;
+  background-color: #ECBE32;
   height: 20vh;
   display: flex;
   justify-content: center;
