--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,7 +1,6 @@
 .header {
   display: flex;
-
-  background-color: #ffb5a7;
+  background-color: #2C3C82;
   height: 10vh;
   width: 100%;
   justify-content: space-between;
@@ -18,6 +17,8 @@
   max-height: 9.9vh;
   margin-right: 10px;
   cursor: pointer;
+  margin-left: 10px;
+  border-radius: 50%;
 }
 
 .icon {
