--- a/src/Components/Promotion.css
+++ b/src/Components/Promotion.css
@@ -1,6 +1,5 @@
 .promotion_wrapper {
-  background-color: #f8edeb;
-  box-shadow: 5px 5px 5px 5px rgba(160, 95, 95, 0.3);
+  /* background-color: #f8edeb; */
   margin-bottom: 5px;
 }
 
@@ -9,7 +8,14 @@
   margin-left: 30px;
   margin-right: 30px;
 }
+.promotion_wrapper-text {
+  text-align: start;
+  margin-left: 60px;
+  margin-top: 20px;
+  font-size: 3rem;
+  font-weight: bold;
 
+}
 .promotion_card {
   width: 100%;
   height: 60vh;
