--- a/src/Pages/FindCourt.css
+++ b/src/Pages/FindCourt.css
@@ -1,7 +1,97 @@
 .body {
-  background-image: url(../Assets/backgroundSporty.png);
+  background-image: url(../Assets/background-all.png);
+  background-size: contain;
   height: 100vh;
   width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.findCourt-bg {
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* background-color: black; */
+  z-index: 9999;
+  backdrop-filter: blur(10px); 
+  /* background-color: rgba($color-black, .3); */
+  /* opacity: 0;
+  visibility: hidden;
+  transition: all .3s;     */
+}
+.findCourt-content {
+  width: 70%;
+  height:60%;
+  background-color: #2C3C82;
+  box-shadow: 0 2rem 4rem rgba(black,.2);
+  border-radius: 30px;
+  overflow: hidden;
+  /* transition: all .5s .2s;s */
+  display: flex;
+  flex-direction: column;
+}
+.findCourt-content >* {
+  margin-left: 20px;
+}
+
+.content-line-1 {
+  display: flex;
+  height: 10%;
+  width: 100%;
+  align-items:center;
+  margin-top: 20px;
+}
+.content-line-input {
+  border-radius: 30px;
+  background-color: #8697CB;
+  height: 50px;
+  width: 80%;
+  margin:20px 20px 20px 0px;
+  padding-left: 50px;
+  color: black;
+  border: none;
+  position: relative;
+}
+.content-line-button {
+  height: 50px;
+  border:none;
+  background-color: #ECBE32;
+  border-radius: 10px;
+  padding: 0px 10px;
+}
+.content-line-2 {
+  display: flex;
+  align-items:center;
+  margin-top: 20px;
+  background-color:#8697CB;
+  height: 50px;
+  width: 20%;
+  padding-left: 20px;
+  border-radius: 30px;
+}
+.content-line-3 {
+  display: flex;
+  text-align: left;
+  margin-top:20px;
+  margin-left: 60px;
+  font-size: 1.5rem;
+  color: white;
+}
+.content-line-3 > * {
+  width: 50%;
+}
+.content-line-3-time {
+  display: flex;
+}
+.content-line-4 {
+  display: flex;
+  flex-direction: column;
+}
+.content-line-4-number {
+  width: 50px;
 }
